--- a/components/Button/Button.mdx
+++ b/components/Button/Button.mdx
@@ -6,10 +6,25 @@ import * as Story from "./Button.stories.ts";
 
 # Botão
 
-Esse é um componente de botão.
+Esse é um componente de botão usado para disparar ações.
 
-<Primary />
-
+### Primário
+<Canvas of={Story.Primary} />
+### Desabilitado
+<Canvas of={Story.Disabled} />
+### Secundário
+<Canvas of={Story.Secondary} />
+### Secundário Desabilitado
+<Canvas of={Story.SecondaryDisabled} />
+### Terciario
+<Canvas of={Story.Tertiary} />
+### Terciario Desabilitado
+<Canvas of={Story.TertiaryDisabled} />
+### Tema Violeta
 <Canvas of={Story.Violet} />
+### Tema Violeta Secundário
+<Canvas of={Story.VioletSecondary} />
 
+## Documentação Interativa:
+<Primary />
 <Controls />
