--- a/components/About.mdx
+++ b/components/About.mdx
@@ -2,6 +2,6 @@ import { Meta } from "@storybook/blocks";
 
 <Meta title="Molecules/About" />
 
-# Molecules
+# Moléculas
 
-Molecules are components of design more complex than atoms.
+Moléculas são grupos relativamente simples de elementos de IU.
